--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@koa/router": "^15.2.0",
+    "@types/koa": "^3.0.1",
+    "@types/koa__router": "^12.0.5",
     "axios": "^1.13.2",
     "electron-updater": "^6.3.9",
+    "koa": "^3.1.1",
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
