--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "electron-vite-react",
-  "version": "2.2.0",
+  "productName": "个人管理",
+  "version": "26.1.8",
   "main": "dist-electron/main/index.js",
   "description": "Electron Vite React boilerplate.",
   "author": "草鞋没号 <308487730@qq.com>",
@@ -23,9 +24,11 @@
     "@koa/router": "^15.2.0",
     "@types/koa": "^3.0.1",
     "@types/koa__router": "^12.0.5",
+    "@types/koa-bodyparser": "^4.3.13",
     "axios": "^1.13.2",
     "electron-updater": "^6.3.9",
     "koa": "^3.1.1",
+    "koa-bodyparser": "^4.4.1",
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
