--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview",
     "pretest": "vite build --mode=test",
-    "test": "vitest run"
+    "test": "vitest run",
+    "rebuild": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
     "@koa/router": "^15.2.0",
@@ -26,6 +27,7 @@
     "@types/koa__router": "^12.0.5",
     "@types/koa-bodyparser": "^4.3.13",
     "axios": "^1.13.2",
+    "better-sqlite3": "^12.6.2",
     "electron-updater": "^6.3.9",
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
@@ -40,6 +42,7 @@
     "autoprefixer": "^10.4.20",
     "electron": "33.2.0",
     "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
     "react": "^18.3.1",
