--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "preview": "vite preview",
     "pretest": "vite build --mode=test",
     "test": "vitest run",
-    "rebuild": "electron-rebuild -f -w better-sqlite3"
+    "rebuild": "npx electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
     "@koa/router": "^15.2.0",
     "@types/koa": "^3.0.1",
-    "@types/koa__router": "^12.0.5",
     "@types/koa-bodyparser": "^4.3.13",
+    "@types/koa__router": "^12.0.5",
     "axios": "^1.13.2",
-    "better-sqlite3": "^12.6.2",
+    "better-sqlite3": "^12.4.6",
+    "canvas": "^3.2.1",
     "electron-updater": "^6.3.9",
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
@@ -41,7 +42,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
-    "electron": "33.2.0",
+    "electron": "40.3.0",
     "electron-builder": "^24.13.3",
     "electron-rebuild": "^3.2.9",
     "postcss": "^8.4.49",
