--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "electron-updater": "^6.3.9",
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
